[BUGFIX] DatePicker unreadable when specific styling in Frontend
The dates cannot be read in the DatePicker when for example Zurb Foundation
is used in the frontend which contains specific table styles.
The white color was used too implicit in the respective styling.

Fixes: #55622
Releases: master, 1.0
Reviewed-on: https://review.typo3.org/27320
Tested-by: Rens Admiraal
Tested-by: Henjo Hoeksma
Tested-by: Karsten Dambekalns
Original-Commit-Hash: 46533fa10311ac044088b1592b576886588965bb

--- a/TYPO3.Neos/Resources/Private/Styles/Foundation/_tables.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/Foundation/_tables.scss
@@ -27,6 +27,7 @@ table {
 		text-align: left;
 		vertical-align: top;
 		border-top: 1px solid $tableBorder;
+		color: $white;
 	}
 	th {
 		font-weight: bold;
@@ -80,10 +81,11 @@ table {
 // -------------------------------
 
 .neos-table-condensed {
-  th,
-  td {
-    padding: 4px 5px;
-  }
+	th,
+	td {
+		padding: 4px 5px;
+		color: $white;
+	}
 }
 
 
